@@ -1,3 +1,8 @@
+2004-03-15  Todd Berman <tberman@sevenl.net>
+
+	* monodevelop.desktop: added some bugzilla info
+	* src/Main/Base/Gui/CompletionDatabaseWizard: added some titles
+
 2004-03-12  Gustavo Giráldez  <gustavo.giraldez@gmx.net>
 
 	* gdldock/sources/gdl/gdl-dock-item-grip.c:
